docs: update license name

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "socketio"
   ],
   "author": "Maverick Fabroa, Christine Lange, Jewel Cedrick Gesim",
-  "license": "SEE LICENSE FILE",
+  "license": "other",
   "bugs": {
     "url": "https://github.com/mavyfaby/fireduino-ws/issues"
   },
