--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fireduino-ws",
-  "version": "1.0.0-pre.1",
+  "version": "1.0.0-pre.2",
   "description": "Fireduino Real-time TCP/IP Web Socket Server",
   "main": "dist/index.js",
   "scripts": {
@@ -26,10 +26,13 @@
   },
   "homepage": "https://github.com/mavyfaby/fireduino-ws#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.13",
+    "@types/node": "^18.16.3",
+    "@types/prompt-sync": "^4.2.0",
+    "prompt-sync": "^4.2.0",
     "socket.io-client": "^4.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
